test/tests/compiler/8_loops/invalid_parse/decl_as_loop_body.plx
pub fn main(none) i32 {
    loop while 1 i: i32 = 0;
    return 0
}
